# agent-skills-bench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
benchmark/harness/: acceptance.py  agent_identity.py  artifacts.py  code_eval.py  common.py  evaluation.py  events.py  host_environment.py  infrastructure_taint.py  metric_artifacts.py  profile_metadata.py  quality_signals.py  rca.py  records.py  scenario_common.py  scenario_run_plan.py  scenario_summaries.py
config/: framework-requirements.txt
docker/: Dockerfile  build_context.dockerignore
docs/: TODO-review-followups.md  handoff-device-selection-criterion.md
tests/: _deep_why_fixtures.py  _neutral_fixtures.py  _report_fixtures.py  conftest.py  skills_benchmark_acceptance_test.py  skills_benchmark_agent_configs_test.py  skills_benchmark_architecture_guard_test.py  skills_benchmark_build_test.py  skills_benchmark_capture_spec_test.py  skills_benchmark_code_eval_test.py  skills_benchmark_codex_accounting_test.py  skills_benchmark_container_runtime_test.py  skills_benchmark_deep_why_snapshot_test.py  skills_benchmark_facade_inventory_test.py  skills_benchmark_fedstats_checks_test.py  skills_benchmark_host_runner_test.py  skills_benchmark_infrastructure_taint_test.py  skills_benchmark_profile_metadata_test.py  skills_benchmark_records_test.py  skills_benchmark_report_plugin_test.py  skills_benchmark_report_snapshot_test.py  skills_benchmark_reporting_test.py  skills_benchmark_routing_acceptance_test.py  skills_benchmark_scenarios_test.py
website/: .gitignore  pyproject.toml  zensical.toml
(+73 files in other folders)
